--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                 <a href="#box-contact" class="nav-link">Contact</a>
                             </li>
                         </ul>
-                        <ul>
+                        <ul class="ham">
                             <li>
                                 <div class="hamburger">
                                     <span class="bar"></span>
